Add Ques_4: Network Traffic Anomaly Detection using Isolation Forest

--- a/src/Module 11/Hands-on - AI-Based Data Quality & Real-Time Monitoring/Ques_4.ipynb
+++ b/src/Module 11/Hands-on - AI-Based Data Quality & Real-Time Monitoring/Ques_4.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,21 +25,9 @@
      "output_type": "stream",
      "text": [
       "🔄 Generating network traffic data...\n",
-      "✅ Data generation complete. Sample rows:\n",
-      "            timestamp  packet_size  duration  connection_count  \\\n",
-      "0 2025-01-01 00:00:00   524.835708  0.091651                 7   \n",
-      "1 2025-01-01 00:01:00   493.086785  0.055224                 5   \n",
-      "2 2025-01-01 00:02:00   532.384427  0.505892                13   \n",
-      "3 2025-01-01 00:03:00   576.151493  0.612897                10   \n",
-      "4 2025-01-01 00:04:00   488.292331  0.016048                16   \n",
-      "\n",
-      "   bytes_per_connection  \n",
-      "0             65.604463  \n",
-      "1             82.181131  \n",
-      "2             38.027459  \n",
-      "3             52.377408  \n",
-      "4             28.723078  \n",
+      "✅ Network data generated successfully.\n",
       "🚀 Running anomaly detection...\n",
+      "✅ Anomaly detection completed. Number of anomalies: 50\n",
       "📊 Plotting results...\n"
      ]
     },
@@ -67,93 +55,128 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Anomaly detection complete. Total anomalies found: 50\n"
+      "✅ Plots generated successfully.\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
-    "# 1. Generate synthetic network traffic data\n",
+    "# 1. Generate synthetic network traffic data with error handling\n",
     "def generate_network_data(n_samples=1000, seed=42):\n",
-    "    np.random.seed(seed)\n",
-    "    timestamps = pd.date_range(start=\"2025-01-01\", periods=n_samples, freq='T')\n",
-    "    packet_size = np.random.normal(loc=500, scale=50, size=n_samples)\n",
-    "    duration = np.random.exponential(scale=0.5, size=n_samples)\n",
-    "    connection_count = np.random.poisson(lam=10, size=n_samples)\n",
+    "    try:\n",
+    "        np.random.seed(seed)\n",
+    "        timestamps = pd.date_range(start=\"2025-01-01\", periods=n_samples, freq='T')\n",
+    "        packet_size = np.random.normal(loc=500, scale=50, size=n_samples)\n",
+    "        duration = np.random.exponential(scale=0.5, size=n_samples)\n",
+    "        connection_count = np.random.poisson(lam=10, size=n_samples)\n",
     "\n",
-    "    # Inject anomalies\n",
-    "    anomaly_indices = np.random.choice(n_samples, size=50, replace=False)\n",
-    "    packet_size[anomaly_indices] *= np.random.uniform(2, 4, size=50)\n",
-    "    duration[anomaly_indices] *= np.random.uniform(3, 6, size=50)\n",
-    "    connection_count[anomaly_indices] += np.random.randint(20, 100, size=50)\n",
+    "        # Inject anomalies into the data\n",
+    "        anomaly_indices = np.random.choice(n_samples, size=50, replace=False)\n",
+    "        packet_size[anomaly_indices] *= np.random.uniform(2, 4, size=50)\n",
+    "        duration[anomaly_indices] *= np.random.uniform(3, 6, size=50)\n",
+    "        connection_count[anomaly_indices] += np.random.randint(20, 100, size=50)\n",
     "\n",
-    "    df = pd.DataFrame({\n",
-    "        'timestamp': timestamps,\n",
-    "        'packet_size': packet_size,\n",
-    "        'duration': duration,\n",
-    "        'connection_count': connection_count\n",
-    "    })\n",
+    "        df = pd.DataFrame({\n",
+    "            'timestamp': timestamps,\n",
+    "            'packet_size': packet_size,\n",
+    "            'duration': duration,\n",
+    "            'connection_count': connection_count\n",
+    "        })\n",
     "\n",
-    "    # ✅ Custom feature: bytes per connection\n",
-    "    df['bytes_per_connection'] = df['packet_size'] / (df['connection_count'] + 1)\n",
-    "    return df\n",
+    "        # ✅ Custom feature: bytes per connection\n",
+    "        df['bytes_per_connection'] = df['packet_size'] / (df['connection_count'] + 1)\n",
+    "        \n",
+    "        print(\"✅ Network data generated successfully.\")\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error in data generation: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# 2. Apply Isolation Forest\n",
+    "# 2. Apply Isolation Forest with error handling\n",
     "def detect_anomalies(df, contamination=0.05):\n",
-    "    features = ['packet_size', 'duration', 'connection_count', 'bytes_per_connection']\n",
-    "    model = IsolationForest(n_estimators=100, contamination=contamination, random_state=42)\n",
-    "    df['anomaly'] = model.fit_predict(df[features])\n",
+    "    try:\n",
+    "        if df is None:\n",
+    "            raise ValueError(\"Dataframe is empty. Cannot apply anomaly detection.\")\n",
+    "        \n",
+    "        features = ['packet_size', 'duration', 'connection_count', 'bytes_per_connection']\n",
+    "        model = IsolationForest(n_estimators=100, contamination=contamination, random_state=42)\n",
+    "\n",
+    "        # Fitting the model to the selected features\n",
+    "        df['anomaly'] = model.fit_predict(df[features])\n",
+    "\n",
+    "        print(f\"✅ Anomaly detection completed. Number of anomalies: {(df['anomaly'] == -1).sum()}\")\n",
+    "        return df\n",
+    "    except ValueError as ve:\n",
+    "        print(f\"❌ Error: {ve}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error during model fitting: {e}\")\n",
     "    return df\n",
     "\n",
-    "# 3. Plotting results\n",
+    "# 3. Plotting results with error handling\n",
     "def plot_network_anomalies(df):\n",
-    "    normal = df[df['anomaly'] == 1]\n",
-    "    anomalous = df[df['anomaly'] == -1]\n",
+    "    try:\n",
+    "        if df is None or df.empty:\n",
+    "            raise ValueError(\"Dataframe is empty. Cannot generate plots.\")\n",
     "\n",
-    "    # Scatter Plot\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.scatter(normal['packet_size'], normal['duration'], color='blue', alpha=0.6, label='Normal')\n",
-    "    plt.scatter(anomalous['packet_size'], anomalous['duration'], color='red', alpha=0.8, label='Anomaly')\n",
-    "    plt.xlabel(\"Packet Size\")\n",
-    "    plt.ylabel(\"Duration\")\n",
-    "    plt.title(\"Modified Plot: Packet Size vs Duration with Anomalies\")\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.show()\n",
+    "        normal = df[df['anomaly'] == 1]\n",
+    "        anomalous = df[df['anomaly'] == -1]\n",
     "\n",
-    "    # Time-Series Plot\n",
-    "    plt.figure(figsize=(12, 5))\n",
-    "    plt.plot(df['timestamp'], df['packet_size'], label='Packet Size')\n",
-    "    plt.scatter(anomalous['timestamp'], anomalous['packet_size'], color='red', marker='x', label='Anomaly')\n",
-    "    plt.xlabel(\"Timestamp\")\n",
-    "    plt.ylabel(\"Packet Size\")\n",
-    "    plt.title(\"Packet Size Over Time with Detected Anomalies\")\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.show()\n",
+    "        # Scatter Plot\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.scatter(normal['packet_size'], normal['duration'], color='blue', alpha=0.6, label='Normal')\n",
+    "        plt.scatter(anomalous['packet_size'], anomalous['duration'], color='red', alpha=0.8, label='Anomaly')\n",
+    "        plt.xlabel(\"Packet Size\")\n",
+    "        plt.ylabel(\"Duration\")\n",
+    "        plt.title(\"Modified Plot: Packet Size vs Duration with Anomalies\")\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
+    "        plt.show()\n",
     "\n",
-    "# 4. Main Execution\n",
+    "        # Time-Series Plot\n",
+    "        plt.figure(figsize=(12, 5))\n",
+    "        plt.plot(df['timestamp'], df['packet_size'], label='Packet Size')\n",
+    "        plt.scatter(anomalous['timestamp'], anomalous['packet_size'], color='red', marker='x', label='Anomaly')\n",
+    "        plt.xlabel(\"Timestamp\")\n",
+    "        plt.ylabel(\"Packet Size\")\n",
+    "        plt.title(\"Packet Size Over Time with Detected Anomalies\")\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
+    "        plt.show()\n",
+    "\n",
+    "        print(\"✅ Plots generated successfully.\")\n",
+    "    except ValueError as ve:\n",
+    "        print(f\"❌ Error: {ve}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error while plotting: {e}\")\n",
+    "\n",
+    "# 4. Main Execution with added error handling\n",
     "def main():\n",
-    "    print(\"🔄 Generating network traffic data...\")\n",
-    "    df = generate_network_data()\n",
-    "    print(\"✅ Data generation complete. Sample rows:\")\n",
-    "    print(df.head())\n",
+    "    try:\n",
+    "        print(\"🔄 Generating network traffic data...\")\n",
+    "        df = generate_network_data()\n",
     "\n",
-    "    print(\"🚀 Running anomaly detection...\")\n",
-    "    df = detect_anomalies(df)\n",
+    "        if df is None:\n",
+    "            raise ValueError(\"Data generation failed. Terminating process.\")\n",
     "\n",
-    "    print(\"📊 Plotting results...\")\n",
-    "    plot_network_anomalies(df)\n",
+    "        print(\"🚀 Running anomaly detection...\")\n",
+    "        df = detect_anomalies(df)\n",
     "\n",
-    "    total_anomalies = (df['anomaly'] == -1).sum()\n",
-    "    print(f\"✅ Anomaly detection complete. Total anomalies found: {total_anomalies}\")\n",
+    "        if df is None or df.empty:\n",
+    "            raise ValueError(\"Anomaly detection failed. Terminating process.\")\n",
+    "        \n",
+    "        print(\"📊 Plotting results...\")\n",
+    "        plot_network_anomalies(df)\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Process failed: {e}\")\n",
     "\n",
-    "# Run it!\n",
+    "# Run the script\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
