Add Ques_1: Introduction to Advanced Data Quality Strategies

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_1.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +26,7 @@
      "text": [
       "🔄 Generating synthetic data...\n",
       "✅ Cleaning data (Handling missing values and duplicates)...\n",
+      "Missing values detected, filling with median...\n",
       "✅ Validating data (Range checks and value validation)...\n",
       "🚀 Detecting anomalies using Isolation Forest...\n",
       "📊 Normalizing data (Standardizing features)...\n",
@@ -61,7 +62,7 @@
     }
    ],
    "source": [
-    "# write your code from here# Ques_1: Introduction to Advanced Data Quality Strategies\n",
+    "# Ques_1: Introduction to Advanced Data Quality Strategies\n",
     "# This notebook demonstrates the application of advanced data quality strategies in a dataset.\n",
     "\n",
     "import pandas as pd\n",
@@ -74,9 +75,10 @@
     "# 1. Generate synthetic data for demonstration\n",
     "# ---------------------------\n",
     "def generate_synthetic_data(n_samples=1000, seed=42):\n",
+    "    \"\"\"Generates synthetic dataset with missing values and outliers.\"\"\"\n",
     "    np.random.seed(seed)\n",
     "\n",
-    "    # Create a synthetic dataset with missing values and outliers\n",
+    "    # Create a synthetic dataset with features: age, income, score, region\n",
     "    data = {\n",
     "        'age': np.random.normal(30, 10, n_samples),\n",
     "        'income': np.random.normal(50000, 15000, n_samples),\n",
@@ -84,11 +86,11 @@
     "        'region': np.random.choice(['North', 'South', 'East', 'West'], n_samples)\n",
     "    }\n",
     "\n",
-    "    # Introduce missing values\n",
+    "    # Introduce missing values (NaN) at regular intervals\n",
     "    data['age'][::100] = np.nan\n",
     "    data['income'][::150] = np.nan\n",
     "\n",
-    "    # Introduce outliers\n",
+    "    # Introduce outliers in the 'score' column\n",
     "    data['score'][::50] = np.random.uniform(0, 100)\n",
     "\n",
     "    df = pd.DataFrame(data)\n",
@@ -98,104 +100,142 @@
     "# 2. Data Cleaning: Handle Missing Values and Duplicates\n",
     "# ---------------------------\n",
     "def clean_data(df):\n",
-    "    # Handling missing values: Filling missing values with median\n",
-    "    df['age'] = df['age'].fillna(df['age'].median())\n",
-    "    df['income'] = df['income'].fillna(df['income'].median())\n",
-    "    \n",
-    "    # Removing duplicate rows\n",
-    "    df = df.drop_duplicates()\n",
+    "    \"\"\"Handles missing values, duplicates, and cleans the data.\"\"\"\n",
+    "    try:\n",
+    "        # Handling missing values: Fill with median values for 'age' and 'income'\n",
+    "        if df.isnull().sum().any():\n",
+    "            print(\"Missing values detected, filling with median...\")\n",
+    "            df['age'] = df['age'].fillna(df['age'].median())\n",
+    "            df['income'] = df['income'].fillna(df['income'].median())\n",
     "\n",
-    "    return df\n",
+    "        # Removing duplicate rows\n",
+    "        if df.duplicated().any():\n",
+    "            print(\"Duplicate rows detected, removing them...\")\n",
+    "            df = df.drop_duplicates()\n",
+    "\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in data cleaning: {e}\")\n",
+    "        return df\n",
     "\n",
     "# ---------------------------\n",
     "# 3. Data Validation: Ensuring Data Integrity (Range checks, value validation)\n",
     "# ---------------------------\n",
     "def validate_data(df):\n",
-    "    # Ensuring no negative income or score\n",
-    "    df['income'] = df['income'].apply(lambda x: max(x, 0))  # Income cannot be negative\n",
-    "    df['score'] = df['score'].apply(lambda x: min(max(x, 0), 100))  # Score is between 0 and 100\n",
+    "    \"\"\"Validates the data by ensuring income and score are within valid ranges.\"\"\"\n",
+    "    try:\n",
+    "        # Ensuring no negative income or score\n",
+    "        df['income'] = df['income'].apply(lambda x: max(x, 0))  # Income cannot be negative\n",
+    "        df['score'] = df['score'].apply(lambda x: min(max(x, 0), 100))  # Score between 0 and 100\n",
     "\n",
-    "    return df\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in data validation: {e}\")\n",
+    "        return df\n",
     "\n",
     "# ---------------------------\n",
     "# 4. Anomaly Detection: Using Isolation Forest\n",
     "# ---------------------------\n",
     "def detect_anomalies(df):\n",
-    "    # Selecting numeric features for anomaly detection\n",
-    "    features = ['age', 'income', 'score']\n",
+    "    \"\"\"Detects anomalies using Isolation Forest.\"\"\"\n",
+    "    try:\n",
+    "        # Ensure the required columns exist\n",
+    "        required_columns = ['age', 'income', 'score']\n",
+    "        if not all(col in df.columns for col in required_columns):\n",
+    "            raise ValueError(f\"Missing required columns in the dataframe: {required_columns}\")\n",
     "\n",
-    "    # Fit the Isolation Forest model\n",
-    "    model = IsolationForest(contamination=0.05, random_state=42)\n",
-    "    df['anomaly'] = model.fit_predict(df[features])\n",
+    "        # Fit the Isolation Forest model\n",
+    "        model = IsolationForest(contamination=0.05, random_state=42)\n",
+    "        df['anomaly'] = model.fit_predict(df[required_columns])\n",
     "\n",
-    "    # Mark anomalies with '1' for normal and '-1' for anomaly\n",
-    "    df['is_anomaly'] = df['anomaly'].apply(lambda x: 'Anomaly' if x == -1 else 'Normal')\n",
-    "    \n",
+    "        # Mark anomalies as 'Anomaly' or 'Normal'\n",
+    "        df['is_anomaly'] = df['anomaly'].apply(lambda x: 'Anomaly' if x == -1 else 'Normal')\n",
+    "\n",
+    "        return df\n",
+    "    except ValueError as ve:\n",
+    "        print(f\"ValueError in anomaly detection: {ve}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error during anomaly detection: {e}\")\n",
     "    return df\n",
     "\n",
     "# ---------------------------\n",
     "# 5. Normalization/Standardization: Standardizing the data\n",
     "# ---------------------------\n",
     "def normalize_data(df):\n",
-    "    scaler = StandardScaler()\n",
-    "    numeric_cols = ['age', 'income', 'score']\n",
+    "    \"\"\"Standardizes the numeric features in the dataset.\"\"\"\n",
+    "    try:\n",
+    "        scaler = StandardScaler()\n",
+    "        numeric_cols = ['age', 'income', 'score']\n",
+    "        \n",
+    "        # Apply scaling to the numeric columns\n",
+    "        df[numeric_cols] = scaler.fit_transform(df[numeric_cols])\n",
     "\n",
-    "    df[numeric_cols] = scaler.fit_transform(df[numeric_cols])\n",
-    "\n",
-    "    return df\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in normalization: {e}\")\n",
+    "        return df\n",
     "\n",
     "# ---------------------------\n",
     "# 6. Visualization: Understanding the impact of cleaning and normalization\n",
     "# ---------------------------\n",
     "def visualize_data(df):\n",
-    "    # Plot the distribution of 'age' and 'income' before and after cleaning\n",
-    "    fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
-    "    \n",
-    "    axes[0].hist(df['age'], bins=30, color='skyblue', alpha=0.7)\n",
-    "    axes[0].set_title(\"Age Distribution (After Cleaning)\")\n",
-    "    axes[0].set_xlabel(\"Age\")\n",
-    "    axes[0].set_ylabel(\"Frequency\")\n",
+    "    \"\"\"Visualizes the cleaned and normalized data.\"\"\"\n",
+    "    try:\n",
+    "        # Plot the distribution of 'age' and 'income' before and after cleaning\n",
+    "        fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "        \n",
+    "        axes[0].hist(df['age'], bins=30, color='skyblue', alpha=0.7)\n",
+    "        axes[0].set_title(\"Age Distribution (After Cleaning)\")\n",
+    "        axes[0].set_xlabel(\"Age\")\n",
+    "        axes[0].set_ylabel(\"Frequency\")\n",
     "\n",
-    "    axes[1].hist(df['income'], bins=30, color='salmon', alpha=0.7)\n",
-    "    axes[1].set_title(\"Income Distribution (After Cleaning)\")\n",
-    "    axes[1].set_xlabel(\"Income\")\n",
-    "    axes[1].set_ylabel(\"Frequency\")\n",
+    "        axes[1].hist(df['income'], bins=30, color='salmon', alpha=0.7)\n",
+    "        axes[1].set_title(\"Income Distribution (After Cleaning)\")\n",
+    "        axes[1].set_xlabel(\"Income\")\n",
+    "        axes[1].set_ylabel(\"Frequency\")\n",
     "\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
     "\n",
-    "    # Plot the anomalies in score\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.scatter(df['age'], df['score'], c=df['anomaly'], cmap='coolwarm', alpha=0.7)\n",
-    "    plt.title(\"Anomalies in Age vs Score\")\n",
-    "    plt.xlabel(\"Age\")\n",
-    "    plt.ylabel(\"Score\")\n",
-    "    plt.colorbar(label=\"Anomaly\")\n",
-    "    plt.show()\n",
+    "        # Plot the anomalies in score vs age\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.scatter(df['age'], df['score'], c=df['anomaly'], cmap='coolwarm', alpha=0.7)\n",
+    "        plt.title(\"Anomalies in Age vs Score\")\n",
+    "        plt.xlabel(\"Age\")\n",
+    "        plt.ylabel(\"Score\")\n",
+    "        plt.colorbar(label=\"Anomaly\")\n",
+    "        plt.show()\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in visualization: {e}\")\n",
     "\n",
     "# ---------------------------\n",
     "# 7. Main Execution: Apply all data quality strategies\n",
     "# ---------------------------\n",
     "def main():\n",
-    "    print(\"🔄 Generating synthetic data...\")\n",
-    "    df = generate_synthetic_data()\n",
+    "    \"\"\"Main function to apply data quality strategies and visualize results.\"\"\"\n",
+    "    try:\n",
+    "        print(\"🔄 Generating synthetic data...\")\n",
+    "        df = generate_synthetic_data()\n",
     "\n",
-    "    print(\"✅ Cleaning data (Handling missing values and duplicates)...\")\n",
-    "    df = clean_data(df)\n",
+    "        print(\"✅ Cleaning data (Handling missing values and duplicates)...\")\n",
+    "        df = clean_data(df)\n",
     "\n",
-    "    print(\"✅ Validating data (Range checks and value validation)...\")\n",
-    "    df = validate_data(df)\n",
+    "        print(\"✅ Validating data (Range checks and value validation)...\")\n",
+    "        df = validate_data(df)\n",
     "\n",
-    "    print(\"🚀 Detecting anomalies using Isolation Forest...\")\n",
-    "    df = detect_anomalies(df)\n",
+    "        print(\"🚀 Detecting anomalies using Isolation Forest...\")\n",
+    "        df = detect_anomalies(df)\n",
     "\n",
-    "    print(\"📊 Normalizing data (Standardizing features)...\")\n",
-    "    df = normalize_data(df)\n",
+    "        print(\"📊 Normalizing data (Standardizing features)...\")\n",
+    "        df = normalize_data(df)\n",
     "\n",
-    "    print(\"🔍 Visualizing the cleaned and normalized data...\")\n",
-    "    visualize_data(df)\n",
+    "        print(\"🔍 Visualizing the cleaned and normalized data...\")\n",
+    "        visualize_data(df)\n",
     "\n",
-    "    print(\"✅ Data quality strategies applied successfully.\")\n",
+    "        print(\"✅ Data quality strategies applied successfully.\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in main execution: {e}\")\n",
     "\n",
     "# ---------------------------\n",
     "# Run the main function\n",
@@ -218,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
