Completed Ques_1.ipynb: Data Quality Metrics

--- a/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_1.ipynb
+++ b/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +183,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import re\n",
     "\n",
     "# Sample Data (replace with your own dataset)\n",
     "data = {\n",
@@ -196,18 +197,29 @@
     "\n",
     "# 1. Completeness: Percentage of missing values\n",
     "def completeness(df):\n",
-    "    return df.isnull().mean() * 100\n",
+    "    try:\n",
+    "        return df.isnull().mean() * 100\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in completeness function: {e}\")\n",
+    "        return None\n",
     "\n",
     "# 2. Validity: Check if email column contains a valid email format (simple check)\n",
-    "import re\n",
     "def validity(df, column):\n",
-    "    pattern = r'^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$'\n",
-    "    valid_emails = df[column].apply(lambda x: bool(re.match(pattern, str(x))))\n",
-    "    return valid_emails.mean() * 100\n",
+    "    try:\n",
+    "        pattern = r'^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$'\n",
+    "        valid_emails = df[column].apply(lambda x: bool(re.match(pattern, str(x))))\n",
+    "        return valid_emails.mean() * 100\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in validity function for {column}: {e}\")\n",
+    "        return None\n",
     "\n",
     "# 3. Consistency: Check if all ages are above a certain threshold (e.g., 18)\n",
     "def consistency(df, column, threshold):\n",
-    "    return (df[column] >= threshold).mean() * 100\n",
+    "    try:\n",
+    "        return (df[column] >= threshold).mean() * 100\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in consistency function for {column}: {e}\")\n",
+    "        return None\n",
     "\n",
     "# Calculate metrics\n",
     "completeness_df = completeness(df)\n",
@@ -220,8 +232,11 @@
     "print(f\"Consistency (Age >= 18): {consistency_age}%\")\n",
     "\n",
     "# Visualize completeness\n",
-    "df.isnull().mean().plot(kind='bar', title='Data Completeness')\n",
-    "plt.show()\n"
+    "try:\n",
+    "    df.isnull().mean().plot(kind='bar', title='Data Completeness')\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(f\"Error in plotting: {e}\")\n"
    ]
   }
  ],
