Completed Ques_1.ipynb: Data Quality Metrics

--- a/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_1.ipynb
+++ b/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_1.ipynb
@@ -42,7 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 3: Creating Expectations for a CSV\n",
+    "**Description**: Develop basic data quality expectations using Great Expectations.\n",
+    "\n",
+    "**Steps**:\n",
+    "1. Expectation Suite\n",
+    "2. Define Expectations for Completeness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -87,28 +106,43 @@
     "# Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# 1. Completeness: Percentage of missing values (Vectorized Operation)\n",
+    "def check_empty(df):\n",
+    "    \"\"\"Check if the DataFrame is empty.\"\"\"\n",
+    "    if df.empty:\n",
+    "        raise ValueError(\"The input DataFrame is empty!\")\n",
+    "    \n",
+    "def check_column_exists(df, column):\n",
+    "    \"\"\"Check if the required column exists in the DataFrame.\"\"\"\n",
+    "    if column not in df.columns:\n",
+    "        raise ValueError(f\"Column '{column}' not found in the DataFrame!\")\n",
+    "\n",
     "def completeness(df):\n",
+    "    \"\"\"Calculate completeness percentage for each column.\"\"\"\n",
     "    try:\n",
+    "        check_empty(df)\n",
     "        return df.isnull().mean() * 100\n",
     "    except Exception as e:\n",
     "        print(f\"Error in completeness function: {e}\")\n",
     "        return None\n",
     "\n",
-    "# 2. Validity: Check if email column contains a valid email format (Vectorized Operation)\n",
     "def validity(df, column):\n",
+    "    \"\"\"Check if the values in the specified column are valid emails.\"\"\"\n",
     "    try:\n",
+    "        check_empty(df)\n",
+    "        check_column_exists(df, column)\n",
+    "        # Regex pattern for email validation\n",
     "        pattern = r'^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$'\n",
-    "        # Using vectorized operation for better performance\n",
     "        valid_emails = df[column].str.match(pattern).fillna(False)\n",
     "        return valid_emails.mean() * 100\n",
     "    except Exception as e:\n",
     "        print(f\"Error in validity function for {column}: {e}\")\n",
     "        return None\n",
     "\n",
-    "# 3. Consistency: Check if all ages are above a certain threshold (e.g., 18) (Vectorized Operation)\n",
     "def consistency(df, column, threshold):\n",
+    "    \"\"\"Check if the values in the specified column are greater than or equal to a threshold.\"\"\"\n",
     "    try:\n",
+    "        check_empty(df)\n",
+    "        check_column_exists(df, column)\n",
     "        return (df[column] >= threshold).mean() * 100\n",
     "    except Exception as e:\n",
     "        print(f\"Error in consistency function for {column}: {e}\")\n",
@@ -130,27 +164,6 @@
     "    plt.show()\n",
     "except Exception as e:\n",
     "    print(f\"Error in plotting: {e}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Task 3: Creating Expectations for a CSV\n",
-    "**Description**: Develop basic data quality expectations using Great Expectations.\n",
-    "\n",
-    "**Steps**:\n",
-    "1. Expectation Suite\n",
-    "2. Define Expectations for Completeness"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
