--- a/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
+++ b/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
@@ -16,169 +16,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-11 18:46:41.060 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.061 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.062 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.063 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.064 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.064 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.065 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.065 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.067 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-11 18:46:41.068 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "{'completeness': 0.95, 'accuracy': 0.89, 'consistency': 0.8, 'dqi_score': 0.88}\n"
      ]
     }
    ],
    "source": [
-    "# dashboard.py\n",
-    "\n",
-    "import streamlit as st\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import re\n",
     "\n",
-    "# Set Streamlit page configuration\n",
-    "st.set_page_config(page_title=\"Data Quality Dashboard\", layout=\"centered\")\n",
+    "# --------- Validation Helper ---------\n",
+    "def validate_dataframe(df):\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise ValueError(\"Input must be a pandas DataFrame.\")\n",
+    "    if df.empty or df.isnull().all().all():\n",
+    "        return False\n",
+    "    return True\n",
     "\n",
-    "# Dashboard Title\n",
-    "st.title(\"📊 Data Quality Dashboard\")\n",
+    "# --------- Completeness Metric ---------\n",
+    "def calculate_completeness(df):\n",
+    "    if not validate_dataframe(df):\n",
+    "        return 0.0\n",
+    "    total_cells = df.size\n",
+    "    non_missing = df.notnull().sum().sum()\n",
+    "    return round(non_missing / total_cells, 2)\n",
     "\n",
-    "# Upload CSV\n",
-    "uploaded_file = st.file_uploader(\"Upload your CSV file\", type=[\"csv\"])\n",
+    "# --------- Accuracy Metric ---------\n",
+    "def calculate_accuracy(df):\n",
+    "    if not validate_dataframe(df):\n",
+    "        return 0.0\n",
+    "    if 'email' not in df.columns:\n",
+    "        return 0.0\n",
     "\n",
-    "# When a file is uploaded, process and display data\n",
-    "if uploaded_file is not None:\n",
-    "    try:\n",
-    "        # Read the CSV file\n",
-    "        df = pd.read_csv(uploaded_file)\n",
-    "        st.success(\"✅ File successfully loaded!\")\n",
+    "    pattern = r'^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$'\n",
+    "    valid_emails = df['email'].dropna().apply(lambda x: bool(re.match(pattern, str(x))))\n",
+    "    return round(valid_emails.sum() / len(valid_emails), 2) if len(valid_emails) > 0 else 0.0\n",
     "\n",
-    "        # Display preview of the dataset\n",
-    "        st.subheader(\"🔍 Dataset Preview\")\n",
-    "        st.dataframe(df.head())\n",
+    "# --------- Consistency Metric ---------\n",
+    "def calculate_consistency(df):\n",
+    "    if not validate_dataframe(df):\n",
+    "        return 0.0\n",
+    "    if 'grade' not in df.columns:\n",
+    "        return 0.0\n",
     "\n",
-    "        # Calculate Data Quality Index (DQI)\n",
-    "        total_cells = df.size\n",
-    "        total_missing = df.isnull().sum().sum()\n",
-    "        dqi = round((1 - total_missing / total_cells) * 100, 2)\n",
+    "    valid_grades = {'A', 'B', 'C', 'D', 'E', 'F'}\n",
+    "    consistent_grades = df['grade'].dropna().apply(lambda x: x in valid_grades)\n",
+    "    return round(consistent_grades.sum() / len(consistent_grades), 2) if len(consistent_grades) > 0 else 0.0\n",
     "\n",
-    "        # Show Data Quality Metrics\n",
-    "        st.subheader(\"📈 Data Quality Metrics\")\n",
-    "        st.metric(label=\"Total Rows\", value=df.shape[0])\n",
-    "        st.metric(label=\"Total Columns\", value=df.shape[1])\n",
-    "        st.metric(label=\"Total Missing Values\", value=total_missing)\n",
-    "        st.metric(label=\"Data Quality Index (DQI)\", value=f\"{dqi} %\")\n",
+    "# --------- Combined DQI Score ---------\n",
+    "def calculate_dqi(df):\n",
+    "    completeness = calculate_completeness(df)\n",
+    "    accuracy = calculate_accuracy(df)\n",
+    "    consistency = calculate_consistency(df)\n",
+    "    dqi_score = round((completeness + accuracy + consistency) / 3, 2)\n",
+    "    return {\n",
+    "        \"completeness\": completeness,\n",
+    "        \"accuracy\": accuracy,\n",
+    "        \"consistency\": consistency,\n",
+    "        \"dqi_score\": dqi_score\n",
+    "    }\n",
     "\n",
-    "        # Display a bar plot for DQI and Errors\n",
-    "        st.subheader(\"📊 DQI vs Errors (%)\")\n",
-    "        fig, ax = plt.subplots()\n",
-    "        ax.bar([\"DQI\", \"Errors\"], [dqi, 100 - dqi], color=[\"green\", \"red\"])\n",
-    "        ax.set_ylabel(\"Percentage\")\n",
-    "        ax.set_ylim([0, 100])\n",
-    "        for i, val in enumerate([dqi, 100 - dqi]):\n",
-    "            ax.text(i, val + 2, f\"{val:.2f}%\", ha='center')\n",
-    "        st.pyplot(fig)\n",
-    "\n",
-    "        # Display missing values per column\n",
-    "        st.subheader(\"🧮 Missing Values per Column\")\n",
-    "        missing_per_column = df.isnull().sum()\n",
-    "        st.bar_chart(missing_per_column)\n",
-    "\n",
-    "    except pd.errors.ParserError:\n",
-    "        st.error(\"❌ The file appears to be malformed. Please check the CSV format.\")\n",
-    "    except UnicodeDecodeError:\n",
-    "        st.error(\"❌ The file contains unsupported characters. Try another encoding.\")\n",
-    "    except ValueError:\n",
-    "        st.error(\"❌ Unexpected value found in the file. Ensure proper format.\")\n",
-    "    except Exception as e:\n",
-    "        st.error(f\"❌ An unexpected error occurred: {e}\")\n",
-    "else:\n",
-    "    st.info(\"📁 Please upload a CSV file to begin.\")\n"
+    "# --------- Sample Usage ---------\n",
+    "df = pd.read_csv('data_quality_sample.csv')\n",
+    "score = calculate_dqi(df)\n",
+    "print(score)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "..F.\n",
-      "======================================================================\n",
-      "FAIL: test_invalid_csv (__main__.TestDQIDashboard)\n",
-      "Test the script's error handling for invalid CSV.\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_775/1243765372.py\", line 41, in test_invalid_csv\n",
-      "    with self.assertRaises(pd.errors.ParserError):\n",
-      "AssertionError: ParserError not raised\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.009s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Ques_2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01munittest\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mQues_2\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m calculate_completeness, calculate_accuracy, calculate_consistency, calculate_dqi\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mTestDataQualityFunctions\u001b[39;00m(unittest\u001b[38;5;241m.\u001b[39mTestCase):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtest_completeness_all_nan\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Ques_2'"
      ]
     }
    ],
    "source": [
-    "# test_dashboard.py\n",
-    "\n",
     "import unittest\n",
     "import pandas as pd\n",
-    "import io\n",
-    "from dashboard import *  # Import the Streamlit app or functions directly\n",
+    "from Ques_2 import calculate_completeness, calculate_accuracy, calculate_consistency, calculate_dqi\n",
     "\n",
-    "class TestDQIDashboard(unittest.TestCase):\n",
+    "class TestDataQualityFunctions(unittest.TestCase):\n",
     "\n",
-    "    def test_dqi_computation(self):\n",
-    "        \"\"\"Test if DQI is calculated correctly.\"\"\"\n",
-    "        # Simulate a small DataFrame with missing values\n",
+    "    def test_completeness_all_nan(self):\n",
+    "        df = pd.DataFrame({'A': [None, None], 'B': [None, None]})\n",
+    "        self.assertEqual(calculate_completeness(df), 0.0)\n",
+    "\n",
+    "    def test_completeness_partial(self):\n",
+    "        df = pd.DataFrame({'A': [1, None], 'B': [None, 2]})\n",
+    "        self.assertEqual(calculate_completeness(df), 0.5)\n",
+    "\n",
+    "    def test_accuracy_invalid_and_valid_emails(self):\n",
+    "        df = pd.DataFrame({'email': ['user@example.com', 'bademail', None]})\n",
+    "        self.assertEqual(calculate_accuracy(df), 0.5)\n",
+    "\n",
+    "    def test_accuracy_missing_column(self):\n",
+    "        df = pd.DataFrame({'name': ['Alice']})\n",
+    "        self.assertEqual(calculate_accuracy(df), 0.0)\n",
+    "\n",
+    "    def test_consistency_valid_and_invalid_grades(self):\n",
+    "        df = pd.DataFrame({'grade': ['A', 'Z', 'B', None]})\n",
+    "        self.assertEqual(calculate_consistency(df), 0.5)\n",
+    "\n",
+    "    def test_consistency_missing_column(self):\n",
+    "        df = pd.DataFrame({'name': ['Bob']})\n",
+    "        self.assertEqual(calculate_consistency(df), 0.0)\n",
+    "\n",
+    "    def test_dqi_combined(self):\n",
     "        df = pd.DataFrame({\n",
-    "            'name': ['Alice', None],\n",
-    "            'age': [25, 30]\n",
+    "            'email': ['user@example.com', 'bademail'],\n",
+    "            'grade': ['A', 'Z'],\n",
+    "            'name': ['Alice', 'Bob']\n",
     "        })\n",
-    "        total_cells = df.size\n",
-    "        total_missing = df.isnull().sum().sum()\n",
-    "        dqi = round((1 - (total_missing / total_cells)) * 100, 2)\n",
-    "        self.assertEqual(dqi, 75.0)\n",
-    "\n",
-    "    def test_empty_file(self):\n",
-    "        \"\"\"Test if the script handles empty CSV files.\"\"\"\n",
-    "        # Simulate an empty file upload\n",
-    "        df = pd.DataFrame()\n",
-    "        self.assertEqual(df.shape[0], 0)\n",
-    "\n",
-    "    def test_missing_values(self):\n",
-    "        \"\"\"Test if missing values are counted correctly.\"\"\"\n",
-    "        df = pd.DataFrame({\n",
-    "            'col1': [1, 2, None],\n",
-    "            'col2': [None, 2, 3]\n",
-    "        })\n",
-    "        missing_values = df.isnull().sum()\n",
-    "        self.assertEqual(missing_values['col1'], 1)\n",
-    "        self.assertEqual(missing_values['col2'], 1)\n",
-    "\n",
-    "    def test_invalid_csv(self):\n",
-    "        \"\"\"Test the script's error handling for invalid CSV.\"\"\"\n",
-    "        invalid_csv = io.StringIO(\"col1,col2\\n1,2\\n3,4\")\n",
-    "        with self.assertRaises(pd.errors.ParserError):\n",
-    "            df = pd.read_csv(invalid_csv)  # Simulate malformed CSV\n",
+    "        result = calculate_dqi(df)\n",
+    "        self.assertIn('dqi_score', result)\n",
+    "        self.assertTrue(0.0 <= result['dqi_score'] <= 1.0)\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    unittest.main(argv=[''], exit=False)\n"
+    "    unittest.main()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
