--- a/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
+++ b/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -90,69 +90,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Ques_2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01munittest\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mQues_2\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m calculate_completeness, calculate_accuracy, calculate_consistency, calculate_dqi\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mTestDataQualityFunctions\u001b[39;00m(unittest\u001b[38;5;241m.\u001b[39mTestCase):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtest_completeness_all_nan\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Ques_2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import unittest\n",
+    "# dq_metrics.py\n",
+    "\n",
     "import pandas as pd\n",
-    "from Ques_2 import calculate_completeness, calculate_accuracy, calculate_consistency, calculate_dqi\n",
+    "import re\n",
     "\n",
-    "class TestDataQualityFunctions(unittest.TestCase):\n",
+    "def validate_dataframe(df):\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise ValueError(\"Input must be a pandas DataFrame.\")\n",
+    "    if df.empty or df.isnull().all().all():\n",
+    "        return False\n",
+    "    return True\n",
     "\n",
-    "    def test_completeness_all_nan(self):\n",
-    "        df = pd.DataFrame({'A': [None, None], 'B': [None, None]})\n",
-    "        self.assertEqual(calculate_completeness(df), 0.0)\n",
+    "def calculate_completeness(df):\n",
+    "    if not validate_dataframe(df):\n",
+    "        return 0.0\n",
+    "    total_cells = df.size\n",
+    "    non_missing = df.notnull().sum().sum()\n",
+    "    return round(non_missing / total_cells, 2)\n",
     "\n",
-    "    def test_completeness_partial(self):\n",
-    "        df = pd.DataFrame({'A': [1, None], 'B': [None, 2]})\n",
-    "        self.assertEqual(calculate_completeness(df), 0.5)\n",
+    "def calculate_accuracy(df):\n",
+    "    if not validate_dataframe(df):\n",
+    "        return 0.0\n",
+    "    if 'email' not in df.columns:\n",
+    "        return 0.0\n",
+    "    pattern = r'^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$'\n",
+    "    valid_emails = df['email'].dropna().apply(lambda x: bool(re.match(pattern, str(x))))\n",
+    "    return round(valid_emails.sum() / len(valid_emails), 2) if len(valid_emails) > 0 else 0.0\n",
     "\n",
-    "    def test_accuracy_invalid_and_valid_emails(self):\n",
-    "        df = pd.DataFrame({'email': ['user@example.com', 'bademail', None]})\n",
-    "        self.assertEqual(calculate_accuracy(df), 0.5)\n",
+    "def calculate_consistency(df):\n",
+    "    if not validate_dataframe(df):\n",
+    "        return 0.0\n",
+    "    if 'grade' not in df.columns:\n",
+    "        return 0.0\n",
+    "    valid_grades = {'A', 'B', 'C', 'D', 'E', 'F'}\n",
+    "    consistent_grades = df['grade'].dropna().apply(lambda x: x in valid_grades)\n",
+    "    return round(consistent_grades.sum() / len(consistent_grades), 2) if len(consistent_grades) > 0 else 0.0\n",
     "\n",
-    "    def test_accuracy_missing_column(self):\n",
-    "        df = pd.DataFrame({'name': ['Alice']})\n",
-    "        self.assertEqual(calculate_accuracy(df), 0.0)\n",
-    "\n",
-    "    def test_consistency_valid_and_invalid_grades(self):\n",
-    "        df = pd.DataFrame({'grade': ['A', 'Z', 'B', None]})\n",
-    "        self.assertEqual(calculate_consistency(df), 0.5)\n",
-    "\n",
-    "    def test_consistency_missing_column(self):\n",
-    "        df = pd.DataFrame({'name': ['Bob']})\n",
-    "        self.assertEqual(calculate_consistency(df), 0.0)\n",
-    "\n",
-    "    def test_dqi_combined(self):\n",
-    "        df = pd.DataFrame({\n",
-    "            'email': ['user@example.com', 'bademail'],\n",
-    "            'grade': ['A', 'Z'],\n",
-    "            'name': ['Alice', 'Bob']\n",
-    "        })\n",
-    "        result = calculate_dqi(df)\n",
-    "        self.assertIn('dqi_score', result)\n",
-    "        self.assertTrue(0.0 <= result['dqi_score'] <= 1.0)\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    unittest.main()\n"
+    "def calculate_dqi(df):\n",
+    "    completeness = calculate_completeness(df)\n",
+    "    accuracy = calculate_accuracy(df)\n",
+    "    consistency = calculate_consistency(df)\n",
+    "    dqi_score = round((completeness + accuracy + consistency) / 3, 2)\n",
+    "    return {\n",
+    "        \"completeness\": completeness,\n",
+    "        \"accuracy\": accuracy,\n",
+    "        \"consistency\": consistency,\n",
+    "        \"dqi_score\": dqi_score\n",
+    "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
