Added data_quality_sample.csv and implemented data quality scoring in Ques_2.ipynb

--- a/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
+++ b/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +90,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..F......F.\n",
+      "======================================================================\n",
+      "FAIL: test_invalid_csv (__main__.TestDQIDashboard)\n",
+      "Test the script's error handling for invalid CSV.\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_775/1243765372.py\", line 41, in test_invalid_csv\n",
+      "    with self.assertRaises(pd.errors.ParserError):\n",
+      "AssertionError: ParserError not raised\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_consistency_valid_and_invalid (__main__.TestDataQualityFunctions)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_775/555304881.py\", line 91, in test_consistency_valid_and_invalid\n",
+      "    self.assertEqual(calculate_consistency(df), 0.5)\n",
+      "AssertionError: 0.67 != 0.5\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 11 tests in 0.021s\n",
+      "\n",
+      "FAILED (failures=2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DQI Metrics: {'completeness': 0.78, 'accuracy': 0.5, 'consistency': 0.67, 'dqi_score': 0.65}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x737d1db327a0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# dq_metrics.py\n",
+    "# ----------------------------------\n",
+    "# Data Quality Metrics Implementation\n",
+    "# ----------------------------------\n",
     "\n",
     "import pandas as pd\n",
     "import re\n",
+    "import unittest\n",
     "\n",
+    "# --------- Validation Helper ---------\n",
     "def validate_dataframe(df):\n",
     "    if not isinstance(df, pd.DataFrame):\n",
     "        raise ValueError(\"Input must be a pandas DataFrame.\")\n",
@@ -106,6 +156,7 @@
     "        return False\n",
     "    return True\n",
     "\n",
+    "# --------- Completeness Metric ---------\n",
     "def calculate_completeness(df):\n",
     "    if not validate_dataframe(df):\n",
     "        return 0.0\n",
@@ -113,6 +164,7 @@
     "    non_missing = df.notnull().sum().sum()\n",
     "    return round(non_missing / total_cells, 2)\n",
     "\n",
+    "# --------- Accuracy Metric ---------\n",
     "def calculate_accuracy(df):\n",
     "    if not validate_dataframe(df):\n",
     "        return 0.0\n",
@@ -122,6 +174,7 @@
     "    valid_emails = df['email'].dropna().apply(lambda x: bool(re.match(pattern, str(x))))\n",
     "    return round(valid_emails.sum() / len(valid_emails), 2) if len(valid_emails) > 0 else 0.0\n",
     "\n",
+    "# --------- Consistency Metric ---------\n",
     "def calculate_consistency(df):\n",
     "    if not validate_dataframe(df):\n",
     "        return 0.0\n",
@@ -131,6 +184,7 @@
     "    consistent_grades = df['grade'].dropna().apply(lambda x: x in valid_grades)\n",
     "    return round(consistent_grades.sum() / len(consistent_grades), 2) if len(consistent_grades) > 0 else 0.0\n",
     "\n",
+    "# --------- Combined DQI Score ---------\n",
     "def calculate_dqi(df):\n",
     "    completeness = calculate_completeness(df)\n",
     "    accuracy = calculate_accuracy(df)\n",
@@ -141,12 +195,64 @@
     "        \"accuracy\": accuracy,\n",
     "        \"consistency\": consistency,\n",
     "        \"dqi_score\": dqi_score\n",
-    "    }\n"
+    "    }\n",
+    "\n",
+    "# --------- Sample Usage ---------\n",
+    "df = pd.DataFrame({\n",
+    "    'name': ['Alice', 'Bob', None],\n",
+    "    'email': ['alice@example.com', 'bob[at]email.com', None],\n",
+    "    'grade': ['A', 'Z', 'B']\n",
+    "})\n",
+    "\n",
+    "print(\"DQI Metrics:\", calculate_dqi(df))\n",
+    "\n",
+    "# ----------------------------------\n",
+    "# Unit Tests\n",
+    "# ----------------------------------\n",
+    "\n",
+    "class TestDataQualityFunctions(unittest.TestCase):\n",
+    "\n",
+    "    def test_completeness_all_nan(self):\n",
+    "        df = pd.DataFrame({'A': [None, None], 'B': [None, None]})\n",
+    "        self.assertEqual(calculate_completeness(df), 0.0)\n",
+    "\n",
+    "    def test_completeness_partial(self):\n",
+    "        df = pd.DataFrame({'A': [1, None], 'B': [None, 2]})\n",
+    "        self.assertEqual(calculate_completeness(df), 0.5)\n",
+    "\n",
+    "    def test_accuracy_valid_and_invalid(self):\n",
+    "        df = pd.DataFrame({'email': ['good@email.com', 'bademail', None]})\n",
+    "        self.assertEqual(calculate_accuracy(df), 0.5)\n",
+    "\n",
+    "    def test_accuracy_missing_column(self):\n",
+    "        df = pd.DataFrame({'name': ['Alice']})\n",
+    "        self.assertEqual(calculate_accuracy(df), 0.0)\n",
+    "\n",
+    "    def test_consistency_valid_and_invalid(self):\n",
+    "        df = pd.DataFrame({'grade': ['A', 'Z', 'C', None]})\n",
+    "        self.assertEqual(calculate_consistency(df), 0.5)\n",
+    "\n",
+    "    def test_consistency_missing_column(self):\n",
+    "        df = pd.DataFrame({'name': ['Alice']})\n",
+    "        self.assertEqual(calculate_consistency(df), 0.0)\n",
+    "\n",
+    "    def test_dqi_combined(self):\n",
+    "        df = pd.DataFrame({\n",
+    "            'name': ['Alice', 'Bob'],\n",
+    "            'email': ['a@b.com', 'wrong'],\n",
+    "            'grade': ['A', 'X']\n",
+    "        })\n",
+    "        result = calculate_dqi(df)\n",
+    "        self.assertIn('dqi_score', result)\n",
+    "        self.assertTrue(0.0 <= result['dqi_score'] <= 1.0)\n",
+    "\n",
+    "# Run the tests if this notebook is executed as main\n",
+    "unittest.main(argv=[''], exit=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
